Fix alignment on match tables
Use block instead of inline-block

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -13,7 +13,7 @@
   padding: 0;
 }
 .home-banner .table .match td a {
-  display: inline-block;
+  display: block;
   min-height: 100%;
   width: 100%;
   padding: 0.3rem;
